    - Live update of traffic rate in tray menu
    - Processes window remembers size
    - Much improved loading time of the Processes window
    - Don't list duplicate processes in Processes window
    - Improved handling of batch whitelisting from Connections list
    - Improved handling of batch whitelisting from Processes list
    - Support F5-refresh in Connections window
    - Sort Connections list by timestamp by default
- General reliability improvements
    - Atomically store configuration
    - Reduced probability of failed whitelisting attempts
    - Fix: Don't leave locked files on service exit
    - Fix: Race condition between update check and service message loop
- Deprecation notes
    - Windows Vista no longer supported
    - 32-bit systems no longer supported

---------------------

2.1.11 - Maintenance release (28.07.2019.)
- Fix service hang on some systems when blocklists are enabled
- Fix service hang on some systems when opening Connections window

---------------------

2.1.10 - Maintenance release (19.07.2019.)
- Fix accidentally introduced dependency on .Net 4.8

---------------------

2.1.9 - Maintenance release (18.07.2019.)
- Add support for Windows 10 v1903
- Add drag&drop whitelist support to applications in settings window
- Fix: Online updates not supporting TLS >= 1.2
- Updated application database
- Updated hosts blocklist

---------------------

2.1.8 - Maintenance release (10.03.2016.)
- Fix: Potential GUI crash when whitelisting by window
- Fix: GUI crash if copying to clipboard which is in use by another app
- Fix: Connections form GUI scaling issue in German localization
- Workaround for performance issue in Windows 10
- Atomic file updates to reduce chance of lost settings in case of file system corruptions
- Handle some more possible errors on uninstallation
- Add Czech localization, and Spanish update

---------------------

2.1.7 - Maintenance release (04.01.2016.)